<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/id_search"
        android:title="@string/app_name"
        android:hint="@string/search_hint"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/id_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/menu_add"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/id_favorits"
        android:icon="@drawable/ic_star_white_24dp"
        android:title="@string/menu_save"
        app:showAsAction="collapseActionView|ifRoom"/>

</menu>

