<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mlns="http://schemas.android.com/tools"
    mlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/id_edit"
        android:title="@string/menu_edit"
        android:icon="@drawable/ic_create_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/id_delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/favorito_id"
        android:icon="@drawable/ic_star_white_24dp"
        android:title="@string/menu_save"
        app:showAsAction="collapseActionView|ifRoom"/>

</menu>