<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.dprogrammer.crudbasico_dpnet.GerirContatoActivity"

    android:orientation="vertical"
    android:weightSum="1">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_nome"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:text="@string/digita_busca_hint"
        android:checked="false">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_busca"
            android:hint="@string/digita_busca_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnBuscar"
        android:drawableLeft="@drawable/ic_search_black_24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right|top" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_busca"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_letra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_opcao_busca"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/input_layout_nome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_nome_musica"
            android:id="@+id/rb_nome_musica"
            android:layout_below="@+id/input_layout_nome"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_nome_cantor"
            android:id="@+id/rb_nome_cantor"
            android:layout_below="@+id/rb_nome_musica"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_trecho_musica"
            android:id="@+id/rb_trecho"
            android:checked="false"
            android:layout_below="@+id/rb_nome_cantor"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RadioGroup>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewResultado"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rg_opcao_busca" />

</RelativeLayout>
